[package]
name = "cue2ccd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
cue = "2.0.0"
miette = { version = "5.6.0", features = ["fancy"] }

[dependencies.cdrom]
path = "cdrom"
version = "0.1.0"
