[package]
name = "cue2ccd"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mistydemeo/cue2ccd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
cue = "2.0.0"
miette = { version = "5.6.0", features = ["fancy"] }
thiserror = "1.0.40"

[dependencies.cdrom]
path = "cdrom"
version = "0.1.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.2.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "mistydemeo/homebrew-formulae"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
