[package]
name = "cue2ccd"
version = "1.0.1"
edition = "2021"
homepage = "https://www.mistys-internet.website/cue2ccd/"
description = "Tool to convert BIN/CUE disc images to CCD/IMG/SUB"
repository = "https://github.com/mistydemeo/cue2ccd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
cue = "3.0.1"
miette = { version = "5.6.0", features = ["fancy"] }
thiserror = "1.0.40"

[dependencies.cdrom]
path = "cdrom"
version = "0.1.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
